# divicards

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.frontend  docker-compose.yml  nginx.conf  package.json  pnpm-lock.yaml
crates/divcord_wasm/: Cargo.toml
crates/server/: Cargo.toml  Dockerfile
crates/server/src/: main.rs
