[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
lib = { path = "../../packages/app/src-tauri/lib", default-features = false }
divi = { path = "../divi" }
ninja = { path = "../ninja" }
reqwest.workspace = true
